package server.log;

public class Logger {
}
