@startuml
'https://plantuml.com/class-diagram
class ChatServer {
ip : int
port : int
logPath : String
--
main()
}
class Logger {
logPath : String
..?????..
}

class Server {
users : HashMap<name : ??>
threadPool : ExecutorService
sockets : Vector<Socket>
}
class Listener {
port : int
serverSocket : ServerSocket
--
listen(ServerSocket)
forward(Socket)
}

class InputScanner {
sockets : Vector<Socket>
--
scan()
}
note right of InputScanner::"scan()"
scan sockets for
.available() data (loop)
end note
class ResponseProtocol {
--
online()
message(String msg)
close(int code)
}

ChatServer --* Logger
ChatServer --* Server

Server --* InputScanner : socket vec
Server -down-* Listener
Server --* ResponseProtocol : socket vec
Listener .right.>InputScanner
Listener .left.> ResponseProtocol
@enduml

